--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "^4.2.4",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "rxjs": "^5.4.2",
     "snazzy-info-window": "^1.1.0",
+    "tether": "^1.4.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
